Adding changes made while launch

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 </head>
 <body>
+  <a href="https://github.com/ShirsenduK/WhatAreYouDownloading"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
   <div class="container-fluid">
     <div class="page-header pagination-centered"><h1>WhatAreYouDownloading?</h1></div>
     <br>
@@ -83,7 +84,15 @@
     <div class="row-fluid">
       <span class="span12">The How and Why of <a href="http://troysk.com/post/41506807295/whatareyoudownloading">WhatAreYouDownloading.com</a></span>
     </div>
-    <footer class="footer navbar-fixed-bottom">Anonymous Serverless P2P file sharing. Based on code from <a href="https://github.com/piranna/ShareIt">ShareIt!</a> by <a href="https://github.com/piranna">@prianna</a> and <a href="https://github.com/Miserlou/DirtyShare">DirtyShare</a> by <a href="https://github.com/Miserlou">@Miserlou</a> and awesome support from <a href="mailto:webp2p@librelist.com">webp2p</a>.</footer>
+    <div class="row-fluid">
+      <span class="span4"></span>
+      <span class="span4 label label-important">Works only on latest builds of Chrome and Firefox.</span>
+      <span class="span4"></span>
+    </div>
+    <div class="row-fluid">
+      <span class="span12">Follow the discussion on <a href="http://news.ycombinator.com/item?id=5119876">Hacker News.</a></span>
+    </div>
+    <footer class="footer navbar-fixed-bottom">Anonymous Serverless P2P file sharing by <a href="https://github.com/ShirsenduK">ShirsenduK</a>. Based on code from <a href="https://github.com/piranna/ShareIt">ShareIt!</a> by <a href="https://github.com/piranna">@piranna</a> and <a href="https://github.com/Miserlou/DirtyShare">DirtyShare</a> by <a href="https://github.com/Miserlou">@Miserlou</a> and awesome support from <a href="mailto:webp2p@librelist.com">webp2p</a>.</footer>
   </div>
 
   <div id="modal-container">
