--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <script type="text/javascript" src="//raw.github.com/taijinlee/humanize/master/humanize.js"></script>
   <script type="text/javascript" src="//shareit.5apps.com/js/webp2p/handshake/simpleSignaling.js"></script>
+  <script type="text/javascript" src="//shareit.5apps.com/js/webp2p/lib/pubnub-3.3.1.js"></script>
   <script type="text/javascript" src="//shareit.5apps.com/js/webp2p/handshake/PubNub.js"></script>
   <script type="text/javascript" src="//shareit.5apps.com/js/webp2p/lib/BoolArray.js"></script>
   <script type="text/javascript" src="//shareit.5apps.com/js/webp2p/lib/datachannel.js"></script>
